Changing scrollbar, minor fixes

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -132,3 +132,20 @@
     background-blend-mode: screen;
   }
 }
+
+#messages-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+#messages-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+#messages-scroll::-webkit-scrollbar-thumb {
+  background-color: var(--color-border);
+  border-radius: 20px;
+}
+
+#messages-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-text-secondary);
+}
